@@ -1,5 +1,10 @@
 2013-11-26  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineTreeViewEditor.h:
+	* OutlineTreeViewEditor.cpp: 
+
+2013-11-26  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* BrowserWindow.h:
 	* OutlineTreeModel.h:
 	* OutlineTreeModel.cpp:
